demo ready; semantic matching left

--- a/UI/landing.html
+++ b/UI/landing.html
@@ -1,3 +1,28 @@
+landing.html
+R
+D
+K
+R
+R
+R
+Type
+HTML
+Size
+11 KB (11,122 bytes)
+Storage used
+22 KB (22,175 bytes)
+Location
+UI
+Owner
+me
+Modified
+1:00 PM by Kaushik Sampath
+Opened
+12:45 PM by me
+Created
+12:45 PM with Google Drive Web
+Add a description
+Viewers can download
 <!-- Author: Kaushik -->
 <!DOCTYPE html>
 <html lang="en">
@@ -30,19 +55,19 @@
     <div class="row pt-md-4">
         <div class="offset-md-8 col-md-2 pl-md-5">
             <!--<button type="button" class="btn btn-lg btn-warning" onclick="gotoIndex('index.html?t=t1')">Type 1&nbsp<i class="fas fa-angle-right"></i></button>-->
-            <button type="button" class="btn btn-lg btn-warning" >Type 1&nbsp<i class="fas fa-angle-right"></i></button>
+            <a href="index.html?t=t1"><button type="button" class="btn btn-lg btn-warning" >Type 1&nbsp<i class="fas fa-angle-right"></i></button></a>
         </div>
     </div>
     <div class="row pt-md-4">
         <div class="offset-md-8 col-md-2 pl-md-5">
             <!--<button type="button" class="btn btn-lg btn-warning" onclick="gotoIndex('index.html?t=t2)">Type 2&nbsp<i class="fas fa-angle-right"></i></button>-->
-            <button type="button" class="btn btn-lg btn-warning">Type 2&nbsp<i class="fas fa-angle-right"></i></button>
+            <a href="index.html?t=t2"><button type="button" class="btn btn-lg btn-warning">Type 2&nbsp<i class="fas fa-angle-right"></i></button></a>
         </div>
     </div>
     <div class="row pt-md-4">
         <div class="offset-md-8 col-md-3">
             <!--<button type="button" class="btn btn-lg btn-warning" onclick="gotoIndex('index.html?t=tBoth')">Type 1 + Type 2&nbsp<i class="fas fa-angle-right"></i></button>-->
-            <button type="button" class="btn btn-lg btn-warning">Type 1 + Type 2&nbsp;&nbsp<i class="fas fa-angle-right"></i></button>
+            <a href="index.html?t=tBoth"><button type="button" class="btn btn-lg btn-warning">Type 1 + Type 2&nbsp;&nbsp<i class="fas fa-angle-right"></i></button></a>
         </div>
     </div>
     <div class="row pt-md-5">
@@ -55,9 +80,7 @@
     </div>
 </div>
 </div>
-<div class="container-fluid clouds">
 
-</div>
 </body>
 <script>
 
@@ -67,6 +90,7 @@
 .bg1 {
       background-image: url("images/landingBackground3.jpg");
       width: 100%;
+      height:100vh;
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center;
