--- a/UI/index.html
+++ b/UI/index.html
@@ -54,8 +54,8 @@
                 <span class="input-group-addon search-icon">&nbsp;&nbsp;<i class="fas fa-search" onclick="searchThreads($('#search-text').val())"></i>&nbsp;&nbsp;</span>
             </div>
         </div>
-        <div class="row" style="display:none">
-            <h5>Showing results for <span style="color:dodgerblue">"low blood sugar"</span></h5>
+        <div class="row" style="display:none" id="results">
+            <h5>Showing results for <span style="color:dodgerblue" id="q">"low blood sugar"</span></h5>
         </div>
         <div class="row">
             <div class="col-md-12">
