--- a/UI/landing.html
+++ b/UI/landing.html
@@ -1,28 +1,3 @@
-landing.html
-R
-D
-K
-R
-R
-R
-Type
-HTML
-Size
-11 KB (11,122 bytes)
-Storage used
-22 KB (22,175 bytes)
-Location
-UI
-Owner
-me
-Modified
-1:00 PM by Kaushik Sampath
-Opened
-12:45 PM by me
-Created
-12:45 PM with Google Drive Web
-Add a description
-Viewers can download
 <!-- Author: Kaushik -->
 <!DOCTYPE html>
 <html lang="en">
@@ -42,7 +17,7 @@ Viewers can download
 
 <body class="font">
 <div class="container-fluid bg1">
-    <div class="row white-text">
+    <div class="row white-text pt-md-5">
         <div class="offset-md-7 col-md-4 text-center pt-md-4 mt-md-4">
             <h1><strong>Sweet Answers</strong></h1>
         </div>
@@ -79,6 +54,22 @@ Viewers can download
         </div>
     </div>
 </div>
+<div class="container-fluid">
+    <div class="row text-center pt-md-5" id="methodology">
+        <div class="col-md-12 white-text">
+            <h1><strong>Our Methodology</strong></h1>
+        </div>
+    </div>
+    <div class="row pt-md-5">
+        <div class="col-md-10 offset-md-1">
+            <img src="images/method-1.png" alt="Simply Easy Learning" height="1000px;" width="1300px;">
+        </div>
+    </div>
+    <div class="row pt-md-4">
+        <div class="col-md-10 offset-md-1">
+            <img src="images/method-2.png" alt="Simply Easy Learning" height="1000px;" width="1300px;">
+        </div>
+    </div>
 </div>
 
 </body>
